--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -5,8 +5,8 @@
             <gradient
                 android:angle="45"
                 android:startColor="#1976D2"
-                android:endColor="#FF5722"
-                android:centerColor="#4CAF50"
+                android:endColor="#2B3C99"
+                android:centerColor="#03A9F4"
                 android:type="linear"/>
         </shape>
     </item>
