--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -77,6 +77,15 @@
           android:textStyle="bold" />
 
 
+        <ProgressBar
+            android:indeterminateTint="#fa2406"
+            android:id="@+id/progress"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:layout_width="30dp"
+            android:layout_height="30dp"></ProgressBar>
+
+
 
     </LinearLayout>
 
