--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,14 @@
           android:textSize="16sp"
           android:textStyle="bold" />
 
+      <ProgressBar
+          android:indeterminateTint="#fa2406"
+          android:id="@+id/progress"
+          android:visibility="gone"
+          android:layout_gravity="center"
+          android:layout_width="30dp"
+          android:layout_height="30dp"></ProgressBar>
+
     </LinearLayout>
 
   </androidx.cardview.widget.CardView>
