--- a/app/src/main/res/layout/activity_search_details.xml
+++ b/app/src/main/res/layout/activity_search_details.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@drawable/gradient_background"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +20,17 @@
        android:layout_height="match_parent">
 
 
+       <ImageView
+           android:layout_centerVertical="true"
+           android:src="@drawable/baseline_arrow_back_24"
+           android:id="@+id/btnBack"
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+            />
+
        <TextView
+           android:layout_marginLeft="12dp"
+           android:layout_toRightOf="@id/btnBack"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_centerVertical="true"
@@ -38,6 +49,8 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_margin="8dp"
+        tools:listitem="@layout/search_items"
         android:layout_marginTop="5dp"
         android:id="@+id/recyclerView"
         android:layout_marginBottom="10dp"
