--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -11,7 +11,24 @@
     android:layout_height="match_parent"
     tools:context=".HomePage">
 
-  <androidx.cardview.widget.CardView
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="Search By Mobile No.!!"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
+
+
+    <androidx.cardview.widget.CardView
       app:cardElevation="18dp"
       android:layout_margin="18dp"
       app:cardCornerRadius="10dp"
@@ -44,6 +61,7 @@
 
 
       <EditText
+          android:maxLength="10"
           android:id="@+id/edittextSearch"
           android:layout_width="300dp"
           android:layout_height="50dp"
@@ -91,5 +109,4 @@
 
   </androidx.cardview.widget.CardView>
 
-  </LinearLayout
-   >
+  </LinearLayout>
