--- a/app/src/main/res/layout/activity_print_recept_screen.xml
+++ b/app/src/main/res/layout/activity_print_recept_screen.xml
@@ -43,6 +43,11 @@
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_below="@+id/toobarDetails"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <androidx.cardview.widget.CardView
         android:layout_below="@+id/toobarDetails"
         android:layout_width="match_parent"
@@ -87,7 +92,7 @@
                 android:orientation="horizontal">
 
                 <TextView android:id="@+id/paymenttypestatic"
-                    android:text="Payment Amount:"
+                    android:text="Payment Type:"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:textSize="18sp"
@@ -117,7 +122,7 @@
                 android:orientation="horizontal">
 
                 <TextView android:id="@+id/textViewownerstatic"
-                    android:text="Txn Time:"
+                    android:text="Transition Time:"
                     android:layout_weight="1"
                     android:layout_below="@id/textViewJalstatic"
                     android:layout_width="0dp"
@@ -328,7 +333,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:text="Zone_Name:"
+                    android:text="Zone Name:"
                     android:layout_weight="1"
                     android:layout_below="@id/textViewownerstatic"
                     android:layout_width="0dp"
@@ -353,7 +358,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:text="Ward_Name:"
+                    android:text="Ward Name:"
                     android:layout_weight="1"
                     android:layout_below="@id/textViewownerstatic"
                     android:layout_width="0dp"
@@ -379,7 +384,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:text="Mohlla_Name:"
+                    android:text="Mohlla Name:"
                     android:layout_weight="1"
                     android:layout_below="@id/textViewownerstatic"
                     android:layout_width="0dp"
@@ -457,7 +462,8 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:text="Total Tax:"
+                    android:textStyle="bold"
+                    android:text="Remaining Amount:"
                     android:layout_weight="1"
                     android:layout_below="@id/textViewownerstatic"
                     android:layout_width="0dp"
@@ -485,7 +491,7 @@
     </androidx.cardview.widget.CardView>
 
 
-
+</androidx.core.widget.NestedScrollView>
 
 
 
